--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@ h1 {
   text-align: center;
 }
 
-featured property {
-  align-content: center
+.lounge {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 body {
