--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ h1 {
 
 nav {
   text-align: center;
-  padding-left: 100px;
-  padding-right:100px;
+  padding-left: 10px;
+  padding-right:10px;
 }
+
+figcaption
