--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ figcaption {
   text-align: center;
 }
 
-#featured-property p {
+.featured-property  {
   width: 800px;
   text-align: center;
 }
+
 
