--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ figcaption {
 }
 
 #featured-property p {
-  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 800px;
   text-align: center;
 }
