--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+h1 {
+  text-align: center;
+}
+
+#lounge {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+}
+
+nav {
+  text-align: center;
+  padding-left: 10px;
+  padding-right:10px;
+}
+
+figcaption {
+  font-size: 80%;
+  text-align: center;
+}
+
+#featured-property p {
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+  text-align: center;
+}
+
+#details div {
+  display: block;
+  float: left;
+  background-color: red;
+  width: 25%;
 }
